<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MediaActivity">

    <SurfaceView
        android:id="@+id/surfaceView"
        android:layout_width="match_parent"
        android:layout_height="569dp">
    </SurfaceView>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/et_MediaPath"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:width="300dp">

        </EditText>

        <Button
            android:id="@+id/b_Start"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="onClickStart"
            android:text="@string/try_to_play">
        </Button>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/b_Pause"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="onClick"
            android:text="@string/pause">
        </Button>
        <Button
            android:id="@+id/b_Resume"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="onClick"
            android:text="@string/resume">
        </Button>
        <Button
            android:id="@+id/b_Stop"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="onClick"
            android:text="@string/stop">
        </Button>

        <CheckBox
            android:id="@+id/chb_Loop"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/loop">

        </CheckBox>
    </LinearLayout>
</LinearLayout>